# lox1

./: .gitignore  CMakeLists.txt
ast/: ExprAst.json  generate_ast.py
include/lexer/: Lexer.h  lexer.h
include/parser/: Parser.h
include/utils/: Error.hpp  SourceReference.hpp  assert.hpp  counter.hpp  error.hpp  utils.hpp
include/visit/: Evaluator.hpp  PrettyPrinter.hpp  SmallVisitors.hpp
scripts/: build.sh
src/: main.cpp
src/lexer/: Lexer.cpp  lexer.cpp
src/parser/: Parser.cpp
test/: dummy-test.cpp
test/ast/: AstTests.cpp
test/lexer/: LexerTests.cpp  TokenTests.cpp  lexer_tests.cpp  token_tests.cpp
test/parser/: ParserTests.cpp
test/visit/: EvaluatorTests.cpp  PrettyPrinterTests.cpp
